--- a/src/components/Catalog.css
+++ b/src/components/Catalog.css
@@ -3,4 +3,11 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 2rem;
+  margin: 2rem;
+}
+
+@media screen {
+  .item-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
