--- a/src/components/ItemCard.css
+++ b/src/components/ItemCard.css
@@ -2,6 +2,8 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   /* width: 30%; */
+  border-radius: 5px;
+  height: 20rem;
 }
 
 .card:hover {
@@ -9,9 +11,21 @@
 }
 
 .container {
-  padding: 2px 16px;
+  /* display: flex; */
+  padding: 1rem;
+  text-align: center;
+  overflow: hidden;
+  /* border: 5px solid red; */
+  /* height: 5%; */
 }
 
 .bg-img {
   width: 100%;
+  height: 75%;
+  object-fit: cover;
+  border-radius:  5px 5px 0 0;
+}
+
+h1 {
+  font: 1.2vw "Fira Sans", sans-serif;
 }
