fix media query size

--- a/src/components/Catalog.css
+++ b/src/components/Catalog.css
@@ -6,7 +6,7 @@
   margin: 2rem;
 }
 
-@media screen {
+@media screen and (max-width: 480px) {
   .item-container {
     grid-template-columns: repeat(1, 1fr);
   }
