--- a/src/components/ItemCard.css
+++ b/src/components/ItemCard.css
@@ -3,7 +3,7 @@
   transition: 0.3s;
   /* width: 30%; */
   border-radius: 5px;
-  height: 20rem;
+  height: 30rem;
 }
 
 .card:hover {
@@ -28,4 +28,14 @@
 
 h1 {
   font: 1.2vw "Fira Sans", sans-serif;
+}
+
+@media screen and (max-width: 480px) {
+  .card {
+    height: 20rem;
+  }
+
+  h1 {
+    font: 5vw "Fira Sans", sans-serif;
+  }
 }
